--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="css/items.css" />
   <link rel="stylesheet" href="css/form.css" />
   <link rel="stylesheet" href="css/counter.css" />
+  <link rel="stylesheet" href="css/notification.css" />
 </head>
 
 <body>
@@ -25,6 +26,10 @@
       </form>
     </div>
   </section>
+
+  <footer class="footer">
+    <p>&copy; <span id="date"></span> All rights reserved by Sujan</p>
+  </footer>
 
   <script type="module" src="js/app.js"></script>
 </body>
